1.1.0
   - bug [11160] "DatadockJob, Job, IJob skal samles til een klasse"
   - bug [11159] "HarvestType enum i common/types skal gøres til privat enum i DatadockMain"
   - bug [11099] "Datadock lukker ikke korrekt ned når/selvom JVM'en får et SIGTERM signal"
   - bug [11115] "Bruges FedoraAuxiliaryMain?"
   - bug [11117] "Efter refaktorering af DatadockMain mangler den test"
   - bug [11103] "Processqueue og PTIManager bruger Vector, skal nok være ArrayList"
   - bug [10936] "XMLDCHarvester pluginnet skal laves om til at benytte et javascript"
   - bug [10172] "Der mangler metode i DatadockJob til at hente language og mimetype"
   - bug [10248] "this.lang giver RuntimeException null"
   - bug [11108] "Der skal laves en funktion til validering af at en funktion findes i et javascript."
   - bug [11076] "Samling af valideringsfunktionalitet for plugins"
   - bug [11104] "NaiveJavaScriptWrapper ser ikke ud til at blive brugt længere"
   - bug [10507] "PluginClassLoader virker overflødig"
   - bug [10570] "testbug"
   - bug [11056] "fjern @Ignore fra FlowMapCreatorTest.createMapTest()"
   - bug [11051] "Der skal laves en type include-funktionalitet til brug i javascripts."
   - bug [10900] "Mystisk test case i CargoContainerTest"
   - bug [11055] "option: "bench" virker ikke mere."
   - bug [10179] "Der skal laves en første version af Simple/GenericRelationPlugin"
   - bug [10937] "IndexeerXSEM og NormalizeDocument bruger PTIJobsMap"
   - bug [11042] "Bruger vi PluginID til noget?"
   - bug [11053] "properties/konfigurationsværdier der læses fra DatadockMain skal checkes"
   - bug [11036] "Bliver ESHarvesterCleanup brugt længere?"
   - bug [10906] "warning fra setPIDInTaskpackageRecordStructure i ESHarvest"
   - bug [10939] "alle plugins skal have et pluginenvironment"
   - bug [11010] "Verificer at ImmutablePair lever op til sit navn"
   - bug [11029] "ForceFedoraPid plugin skal stå før XMLDCHarvester i workflows.xml"