@@ -1,4 +1,5 @@
 1.1.0
+   - bug [10734] "XMLDCHarvesterTest skal refaktoreres"
    - bug [11160] "DatadockJob, Job, IJob skal samles til een klasse"
    - bug [11159] "HarvestType enum i common/types skal gøres til privat enum i DatadockMain"
    - bug [11099] "Datadock lukker ikke korrekt ned når/selvom JVM'en får et SIGTERM signal"
